<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<groupId>net.culnane</groupId>
	<artifactId>java-pi-thing</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>Java PI Sensors</name>
	<url>https://github.com/dougculnane/java-pi-thing</url>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<pi4j.version>2.2.1</pi4j.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
	    <!-- include Pi4J Core -->
	    <dependency>
	        <groupId>com.pi4j</groupId>
	        <artifactId>pi4j-core</artifactId>
	        <version>${pi4j.version}</version>
	    </dependency>
	    <!-- include Pi4J Plugins (Platforms and I/O Providers) -->
	    <dependency>
	        <groupId>com.pi4j</groupId>
	        <artifactId>pi4j-plugin-raspberrypi</artifactId>
	        <version>${pi4j.version}</version>
	    </dependency>
	    <dependency>
	        <groupId>com.pi4j</groupId>
	        <artifactId>pi4j-plugin-pigpio</artifactId>
	        <version>${pi4j.version}</version>
    	</dependency>
	</dependencies>
	<build>
		<resources>
			<resource>
				<directory>${project.basedir}/src/main/resources-filtered</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<id>assemble</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<attach>true</attach>
					<archive>
						<manifest>
							<mainClass>net.culnane.pi.thing.CommandLineRunner</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
